--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "icecast-metadata-player": "^1.13.1",
+    "nchan": "^1.0.10",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
+    "vue-marquee-text-component": "^2.0.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
     "vue-tsc": "^1.0.8"
