--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ name: Lint and Build Project
 on: push
 
 jobs:
-  build:
+  lint:
 
     runs-on: ubuntu-latest
 
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Lint
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
